--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -6,6 +6,9 @@
 >
     <uses-sdk android:minSdkVersion="7" android:targetSdkVersion="19"/>
 
+    <!-- Read Wi-Fi configurations. -->
+    <uses-permission android:name="android.permission.ACCESS_WIFI_STATE"/>
+
     <application
             android:label="@string/app_name"
             android:icon="@drawable/ic_launcher"
