--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-          package="in.eigene.qrwifi"
+          package="in.eigene.miary"
           android:versionCode="1"
           android:versionName="0.0.1b"
 >
@@ -12,7 +12,7 @@
     <application
             android:label="@string/app_name"
             android:icon="@drawable/ic_launcher"
-            android:theme="@style/QrWiFi.Theme.Application"
+            android:theme="@style/Miary.Theme.Application"
     >
         <activity
                 android:name="in.eigene.miary.activities.MainActivity"
