--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -24,5 +24,10 @@
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
+        <activity
+                android:name="in.eigene.miary.activities.NoteActivity"
+                android:label="@string/note_activity"
+        >
+        </activity>
     </application>
 </manifest>
