--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -2,7 +2,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
           package="in.eigene.miary"
           android:versionCode="1"
-          android:versionName="0.0.1b"
+          android:versionName="0.1"
 >
     <uses-sdk android:minSdkVersion="7" android:targetSdkVersion="19"/>
 
