--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -14,6 +14,7 @@
             android:label="@string/app_name"
             android:icon="@drawable/ic_launcher"
             android:theme="@style/Miary.Theme.Application"
+            android:name="in.eigene.miary.Application"
     >
         <activity
                 android:name="in.eigene.miary.activities.MainActivity"
