--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -7,8 +7,10 @@
     <uses-sdk android:minSdkVersion="11" android:targetSdkVersion="19"/>
 
     <!-- Parse SDK. -->
-    <uses-permission android:name="android.permission.INTERNET" />
-    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    <uses-permission android:name="android.permission.INTERNET"/>
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
+    <!-- Exporting. -->
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
 
     <application
             android:label="@string/app_name"
