--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -35,5 +35,10 @@
                 android:name="in.eigene.miary.activities.SettingsActivity"
                 android:label="@string/activity_settings"
         />
+        <activity
+                android:name="in.eigene.miary.activities.PinActivity"
+                android:label="@string/activity_pin"
+                android:theme="@android:style/Theme.Holo.NoActionBar"
+        />
     </application>
 </manifest>
