--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -11,6 +11,8 @@
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
     <!-- Exporting. -->
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
+    <!-- Reminder notifications scheduling -->
+    <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED"/>
 
     <application
             android:label="@string/app_name"
@@ -18,6 +20,7 @@
             android:theme="@style/Miary.Theme.Application"
             android:name="in.eigene.miary.Application"
     >
+        <!-- Activities -->
         <activity
                 android:name=".activities.FeedActivity"
                 android:label="@string/app_name"
@@ -40,8 +43,20 @@
                 android:label="@string/activity_pin"
                 android:theme="@android:style/Theme.Holo.NoActionBar"
         />
+
+        <!-- Services -->
         <service
-            android:name=".services.NotificationService"
-            android:enabled="true"/>
+                android:name=".services.NotificationService"
+                android:enabled="true"/>
+
+        <!-- Receivers -->
+        <receiver
+                android:name=".receivers.BootReceiver"
+                android:enabled="true"
+        >
+            <intent-filter>
+                <action android:name="android.intent.action.BOOT_COMPLETED"/>
+            </intent-filter>
+        </receiver>
     </application>
 </manifest>
