--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -58,5 +58,8 @@
                 <action android:name="android.intent.action.BOOT_COMPLETED"/>
             </intent-filter>
         </receiver>
+        <receiver
+                android:name=".receivers.CreateNewNoteReceiver"
+        />
     </application>
 </manifest>
