--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -45,10 +45,24 @@
                 android:windowSoftInputMode="stateAlwaysVisible"
         />
 
+        <!-- Dropbox Android Core SDK. -->
+        <activity
+                android:name="com.dropbox.client2.android.AuthActivity"
+                android:launchMode="singleTask"
+                android:configChanges="orientation|keyboard">
+            <intent-filter>
+                <data android:scheme="db-cvklgjd9ykfi561" />
+                <action android:name="android.intent.action.VIEW" />
+                <category android:name="android.intent.category.BROWSABLE"/>
+                <category android:name="android.intent.category.DEFAULT" />
+            </intent-filter>
+        </activity>
+
         <!-- Services -->
         <service
                 android:name=".services.NotificationIntentService"
-                android:enabled="true"/>
+                android:enabled="true"
+        />
 
         <!-- Receivers -->
         <receiver
