--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -86,5 +86,12 @@
         <receiver
                 android:name=".receivers.CreateNewNoteReceiver"
         />
+
+        <provider
+                android:name=".sync.StubContentProvider"
+                android:authorities="in.eigene.miary.provider"
+                android:exported="false"
+                android:syncable="true"
+        />
     </application>
 </manifest>
