--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -13,6 +13,8 @@
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
     <!-- Reminder notifications scheduling -->
     <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED"/>
+    <!-- Syncing. -->
+    <uses-permission android:name="android.permission.AUTHENTICATE_ACCOUNTS"/>
 
     <application
             android:label="@string/app_name"
@@ -87,11 +89,25 @@
                 android:name=".receivers.CreateNewNoteReceiver"
         />
 
+        <!-- Syncing. -->
         <provider
                 android:name=".sync.StubContentProvider"
                 android:authorities="in.eigene.miary.provider"
                 android:exported="false"
                 android:syncable="true"
         />
+        <service
+                android:name=".sync.SyncService"
+                android:exported="true"
+                android:process=":sync"
+        >
+            <intent-filter>
+                <action android:name="android.content.SyncAdapter"/>
+            </intent-filter>
+            <meta-data
+                    android:name="android.content.SyncAdapter"
+                    android:resource="@xml/syncadapter"
+            />
+        </service>
     </application>
 </manifest>
