--- a/project.properties
+++ b/project.properties
@@ -13,3 +13,4 @@
 # Project target.
 target=Google Inc.:Google APIs:21
 android.library.reference.1=C\:/Program Files (x86)/Android/android-sdk/extras/android/support/v7/appcompat
+android.library.reference.2=C\:/Program Files (x86)/Android/android-sdk/extras/android/support/v7/gridlayout
