--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -55,8 +55,8 @@
         />
         <activity
                 android:name=".activities.PinActivity"
-                android:label="@string/activity_pin"
-                android:windowSoftInputMode="stateAlwaysVisible"
+                android:label="@string/app_name"
+                android:windowSoftInputMode="stateAlwaysVisible|adjustResize"
                 android:theme="@style/Miary.Theme.Modal"
         />
         <activity
