--- a/app/build.gradle
+++ b/app/build.gradle
@@ -8,14 +8,21 @@ android {
         applicationId "in.eigene.miary"
         minSdkVersion 15
         targetSdkVersion 21
-        versionCode 47
-        versionName "0.8.5"
+        versionCode 1
+        versionName "1.0"
     }
     buildTypes {
         release {
-            minifyEnabled false
+            minifyEnabled true
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
+    }
+    packagingOptions {
+        exclude 'META-INF/DEPENDENCIES'
+        exclude 'META-INF/NOTICE'
+        exclude 'META-INF/LICENSE'
+        exclude 'META-INF/LICENSE.txt'
+        exclude 'META-INF/NOTICE.txt'
     }
 }
 
