--- a/vexor.yml
+++ b/vexor.yml
@@ -1,3 +1,6 @@
 language: java
-script:
-- ./gradlew --quiet
+install:
+- wget http://dl.google.com/android/android-sdk_r24.0.2-linux.tgz
+- tar xf android-sdk_r24.0.2-linux.tgz
+- export ANDROID_HOME=android-sdk-linux
+script: ./gradlew --quiet
