--- a/vexor.yml
+++ b/vexor.yml
@@ -3,4 +3,5 @@ install:
 - wget http://dl.google.com/android/android-sdk_r24.0.2-linux.tgz
 - tar xf android-sdk_r24.0.2-linux.tgz
 - export ANDROID_HOME=android-sdk-linux
+- echo "y" | $ANDROID_HOME/tools/android update sdk --no-ui --all --filter platform-tools,build-tools-21.1.2,android-21
 script: ./gradlew --quiet
