--- a/vexor.yml
+++ b/vexor.yml
@@ -5,6 +5,6 @@ cache:
 install:
 - test -d android-sdk-linux || wget http://dl.google.com/android/android-sdk_r24.0.2-linux.tgz
 - test -d android-sdk-linux || tar xf android-sdk_r24.0.2-linux.tgz
-- echo y | android-sdk-linux/tools/android update sdk --no-ui --all --filter platform-tools,build-tools-21.1.2,android-21
+- echo y | android-sdk-linux/tools/android update sdk --no-ui --all --filter platform-tools,build-tools-21.1.2,android-21,extra-android-support
 script:
 - ANDROID_HOME=android-sdk-linux ./gradlew --quiet
