--- a/vexor.yml
+++ b/vexor.yml
@@ -3,6 +3,7 @@ cache:
   directories:
   - ~/android-sdk-linux
 install:
+- ls -lah
 - test -d android-sdk-linux || wget http://dl.google.com/android/android-sdk_r24.0.2-linux.tgz
 - test -d android-sdk-linux || tar xf android-sdk_r24.0.2-linux.tgz
 - echo y | android-sdk-linux/tools/android update sdk --no-ui --all --filter platform-tools,build-tools-21.1.2,android-21,extra-android-m2repository
