--- a/vexor.yml
+++ b/vexor.yml
@@ -4,6 +4,7 @@ cache:
   - ~/android-sdk-linux
   - ~/.gradle
 install:
+- rm -rf ~/android-sdk-linux
 - test -d ~/android-sdk-linux || (
     wget -O - http://dl.google.com/android/android-sdk_r24.0.2-linux.tgz | tar xz -C ~ &&
     echo y | ~/android-sdk-linux/tools/android update sdk --no-ui --all --filter platform-tools,build-tools-21.1.2,android-21,extra-android-m2repository
