--- a/vexor.yml
+++ b/vexor.yml
@@ -4,7 +4,7 @@ cache:
   - ~/android-sdk-linux
   - ~/.gradle
 before_install:
-- sudo apt-get install lib32stdc++6 lib32z1
+- sudo apt-get --yes install lib32stdc++6 lib32z1
 install:
 - rm -rf ~/android-sdk-linux
 - test -d ~/android-sdk-linux || (
