--- a/vexor.yml
+++ b/vexor.yml
@@ -3,6 +3,7 @@ cache:
   directories:
   - ~/android-sdk-linux
   - ~/.gradle
+  - ~/miaryapp/miary-android/app/build
 before_install:
 - sudo apt-get --yes -qq install lib32stdc++6 lib32z1
 install:
