--- a/vexor.yml
+++ b/vexor.yml
@@ -4,8 +4,9 @@ cache:
   - ~/android-sdk-linux
   - ~/.gradle
 before_install:
-- sudo apt-get --yes -qq install lib32stdc++6 lib32z1
+- # sudo apt-get --yes -qq install lib32stdc++6 lib32z1
 install:
+- ll ~/android-sdk-linux
 - test -f "~/android-sdk-linux/SDK Readme.txt" && echo "existing" || echo "not existing"
 - false
 - test -f "~/android-sdk-linux/SDK Readme.txt" || (
