ll ~/android-sdk-linux

--- a/vexor.yml
+++ b/vexor.yml
@@ -6,7 +6,7 @@ cache:
 before_install:
 - # sudo apt-get --yes -qq install lib32stdc++6 lib32z1
 install:
-- ll ~/android-sdk-linux
+- ls -lah ~/android-sdk-linux
 - test -f "~/android-sdk-linux/SDK Readme.txt" && echo "existing" || echo "not existing"
 - false
 - test -f "~/android-sdk-linux/SDK Readme.txt" || (
