--- a/vexor.yml
+++ b/vexor.yml
@@ -4,13 +4,8 @@ cache:
   - ~/android-sdk-linux
   - ~/.gradle
 before_install:
-- # sudo apt-get --yes -qq install lib32stdc++6 lib32z1
+- sudo apt-get --yes -qq install lib32stdc++6 lib32z1
 install:
-- ls -lah "~/android-sdk-linux"
-- ls -lah "~/android-sdk-linux/SDK Readme.txt"
-- ls -lah ~/android-sdk-linux/SDK\ Readme.txt
-- test -f "~/android-sdk-linux/SDK Readme.txt" && echo "existing" || echo "not existing"
-- false
 - test -f "~/android-sdk-linux/SDK Readme.txt" || (
     wget -O - http://dl.google.com/android/android-sdk_r24.0.2-linux.tgz | tar xz -C ~ &&
     echo y | ~/android-sdk-linux/tools/android update sdk --no-ui --all --filter platform-tools,build-tools-21.1.2,android-21,extra-android-m2repository
