--- a/app/build.gradle
+++ b/app/build.gradle
@@ -8,8 +8,8 @@ android {
         applicationId "in.eigene.miary"
         minSdkVersion 14
         targetSdkVersion 22
-        versionCode 49
-        versionName "0.8.7"
+        versionCode 50
+        versionName "0.9a"
     }
     buildTypes {
         debug {
