--- a/app/build.gradle
+++ b/app/build.gradle
@@ -35,4 +35,5 @@ dependencies {
     compile 'com.android.support:cardview-v7:22.+'
     compile 'com.android.support:recyclerview-v7:22.+'
     compile 'com.parse.bolts:bolts-android:1.+'
+    compile 'com.google.android.gms:play-services-analytics:7.5.0'
 }
