--- a/app/build.gradle
+++ b/app/build.gradle
@@ -8,8 +8,8 @@ android {
         applicationId "in.eigene.miary"
         minSdkVersion 14
         targetSdkVersion 22
-        versionCode 53
-        versionName "0.9a"
+        versionCode 54
+        versionName "0.9b"
     }
     buildTypes {
         debug {
