--- a/vexor.yml
+++ b/vexor.yml
@@ -8,7 +8,7 @@ before_install:
 install:
 - test -d ~/android-sdk-linux || (
     wget -O - http://dl.google.com/android/android-sdk_r24.0.2-linux.tgz | tar xz -C ~ &&
-    echo y | ~/android-sdk-linux/tools/android update sdk --no-ui --all --filter platform-tools,build-tools-21.1.2,android-21,extra-android-m2repository
+    echo y | ~/android-sdk-linux/tools/android update sdk --no-ui --all --filter platform-tools,build-tools-22.0.1,android-22,extra-google-google_play_services,extra-android-m2repository
   )
 script:
 - ANDROID_HOME=~/android-sdk-linux ./gradlew --quiet assembleRelease
