--- a/vexor.yml
+++ b/vexor.yml
@@ -7,8 +7,8 @@ before_install:
 - sudo apt-get --yes -qq install lib32stdc++6 lib32z1
 install:
 - test -d ~/android-sdk-linux || (
-    wget -O - http://dl.google.com/android/android-sdk_r24.0.2-linux.tgz | tar xz -C ~ &&
-    echo y | ~/android-sdk-linux/tools/android update sdk --no-ui --all --filter platform-tools,build-tools-22.0.1,android-22,extra-google-google_play_services,extra-android-m2repository
+    wget -O - http://dl.google.com/android/android-sdk_r24.3.3-linux.tgz | tar xz -C ~ &&
+    echo y | ~/android-sdk-linux/tools/android update sdk --no-ui --all --filter platform-tools,build-tools-22.0.1,android-22,extra-android-m2repository
   )
 script:
 - ANDROID_HOME=~/android-sdk-linux ./gradlew --quiet assembleRelease
