--- a/app/build.gradle
+++ b/app/build.gradle
@@ -37,4 +37,5 @@ dependencies {
     compile 'com.android.support:recyclerview-v7:23.1.0'
     compile 'com.google.android.gms:play-services-analytics:8.1.0'
     compile 'com.parse.bolts:bolts-android:1.2.0'
+    compile 'com.parse:parse-android:1.10.3'
 }
