--- a/app/build.gradle
+++ b/app/build.gradle
@@ -38,4 +38,5 @@ dependencies {
     compile 'com.google.android.gms:play-services-analytics:8.1.0'
     compile 'com.parse.bolts:bolts-android:1.2.0'
     compile 'com.parse:parse-android:1.10.3'
+    compile 'com.github.QuadFlask:colorpicker:0.0.9'
 }
