--- a/app/build.gradle
+++ b/app/build.gradle
@@ -9,8 +9,8 @@ android {
         minSdkVersion 14
         //noinspection OldTargetApi https://bitbucket.org/miaryapp/miary-android/issues/230/android-m
         targetSdkVersion 22
-        versionCode 79
-        versionName "0.9.6b"
+        versionCode 80
+        versionName "0.9.6"
     }
     buildTypes {
         debug {
